--- a/profesional-web/src/components/Header.astro
+++ b/profesional-web/src/components/Header.astro
@@ -2,4 +2,103 @@
 
 ---
 
-<header class="p-0"></header>
+<header class="">
+    <h1 class="text-xl md:text-5xl text-center">SHINNYTOOTHS</h1>
+
+    <nav class="nav flex flex-wrap items-center justify-between px-4">
+        <input class="menu-btn hidden" type="checkbox" id="menu-btn" />
+        <label
+            class="menu-icon block cursor-pointer md:hidden px-2 py-4 relative select-none"
+            for="menu-btn"
+        >
+            <span class="navicon flex items-center relative"> </span>
+        </label>
+
+        <ul
+            class="menu border-b md:border-none flex justify-end list-reset m-0 w-full md:w-auto"
+        >
+            <li class="border-t md:border-none">
+                <a
+                    href="/"
+                    class="block md:inline-block px-4 py-3 no-underline text-grey-darkest hover:text-grey-darker font-bold¡"
+                >
+                    Home
+                </a>
+            </li>
+
+            <li class="border-t md:border-none">
+                <a
+                    href="/about/"
+                    class="block md:inline-block px-4 py-3 no-underline text-grey-darkest hover:text-grey-darker"
+                >
+                    Productos
+                </a>
+            </li>
+
+            <li class="border-t md:border-none">
+                <a
+                    href="/blog/"
+                    class="block md:inline-block px-4 py-3 no-underline text-grey-darkest hover:text-grey-darker"
+                >
+                    Contacto
+                </a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<style>
+    @media (max-width: 767px) {
+        .navicon {
+            width: 1.125em;
+            height: 0.125em;
+        }
+
+        .navicon::before,
+        .navicon::after {
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            transition: all 0.2s ease-out;
+            content: "";
+            background: #000000;
+        }
+
+        .navicon::before {
+            top: 5px;
+        }
+
+        .navicon::after {
+            top: -5px;
+        }
+
+        .menu-btn:not(:checked) ~ .menu {
+            display: none;
+        }
+
+        .menu-btn:checked ~ .menu {
+            display: block;
+        }
+
+        .menu-btn:checked ~ .menu-icon .navicon {
+            background: transparent;
+        }
+
+        .menu-btn:checked ~ .menu-icon .navicon::before {
+            transform: rotate(-45deg);
+        }
+
+        .menu-btn:checked ~ .menu-icon .navicon::after {
+            transform: rotate(45deg);
+        }
+
+        .menu-btn:checked ~ .menu-icon .navicon::before,
+        .menu-btn:checked ~ .menu-icon .navicon::after {
+            top: 0;
+        }
+    }
+    body {
+        color: #fff;
+    }
+</style>
