--- a/profesional-web/src/pages/index.astro
+++ b/profesional-web/src/pages/index.astro
@@ -1,9 +1,33 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="SHINNYTOOTHS">
+	<Header />
 	<main>
-		<h1>Enpresa</h1>
+		<img
+			class="w-1/2 mx-auto"
+			src="/shinnytooths-nombre.png"
+			alt="Nombre de la Enpresa"
+		/>
+
+		<img
+			class="w-1/4 mx-auto -translate-y-1/3"
+			src="/shinnytooths-logo.png"
+			alt="logo de la enpresa"
+		/>
+		<h2 class="text-lg md:text-3xl text-center">Sobre Nosotros</h2>
+		<div class="align-middle justify-center flex m-8">
+			<p class="text-center max-w-96 align-middle">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+				enim ad minim veniam, quis nostrud exercitation ullamco laboris
+				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+				in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+				nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+				sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
 	</main>
 </Layout>
