hacer productos y formulario

--- a/profesional-web/src/components/Header.astro
+++ b/profesional-web/src/components/Header.astro
@@ -28,7 +28,7 @@
 
             <li class="border-t md:border-none">
                 <a
-                    href="/about/"
+                    href="/productos/"
                     class="block md:inline-block px-4 py-3 no-underline text-grey-darkest hover:text-grey-darker"
                 >
                     Productos
@@ -37,7 +37,7 @@
 
             <li class="border-t md:border-none">
                 <a
-                    href="/blog/"
+                    href="/contacto/"
                     class="block md:inline-block px-4 py-3 no-underline text-grey-darkest hover:text-grey-darker"
                 >
                     Contacto
@@ -62,7 +62,7 @@
             height: 100%;
             transition: all 0.2s ease-out;
             content: "";
-            background: #000000;
+            background: #ffffff;
         }
 
         .navicon::before {
