--- a/src/pages/productos.astro
+++ b/src/pages/productos.astro
@@ -9,32 +9,32 @@ import ProducCard from "../components/ProductCard.astro";
     <main class="grid md:grid-cols-3 grid-cols-1 grid-rows-9 gap-1">
         <ProducCard
             imagenSrc="/sample.jpg"
-            product="Producto de ejmplo"
+            product="Producto de ejemplo"
             productDesc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,"
         />
         <ProducCard
             imagenSrc="/sample.jpg"
-            product="Producto de ejmplo"
+            product="Producto de ejemplo"
             productDesc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,"
         />
         <ProducCard
             imagenSrc="/sample.jpg"
-            product="Producto de ejmplo"
+            product="Producto de ejemplo"
             productDesc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,"
         />
         <ProducCard
             imagenSrc="/sample.jpg"
-            product="Producto de ejmplo"
+            product="Producto de ejemplo"
             productDesc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,"
         />
         <ProducCard
             imagenSrc="/sample.jpg"
-            product="Producto de ejmplo"
+            product="Producto de ejemplo"
             productDesc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,"
         />
         <ProducCard
             imagenSrc="/sample.jpg"
-            product="Producto de ejmplo"
+            product="Producto de ejemplo"
             productDesc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,"
         />
     </main>
